--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     </header>
     <main>
         <h1>Christoper Calvachi | WDD 130</h1>
-        <img src="/img/profile.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
-        <img src="/img/profile2.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
+        <img src="img/profile.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
+        <img src="img/profile2.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
         <p>Hello! My name is Christoper Calvachi and i am from Quito, Ecuador.
             I am very excited to start my course here at BYU Idaho, I have been a web developer for 4 years, 
             I work for a company called Lambdo which is in Utah USA..
