--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christoper Calvachi | WWD 130</title>
-    <link rel="stylesheet" href="assets/css/estilos.css">
+    <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
     <header>
@@ -17,7 +17,6 @@
     <main>
         <h1>Christoper Calvachi | WDD 130</h1>
         <img src="img/profile.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
-        <img src="img/profile2.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
         <p>Hello! My name is Christoper Calvachi and i am from Quito, Ecuador.
             I am very excited to start my course here at BYU Idaho, I have been a web developer for 4 years, 
             I work for a company called Lambdo which is in Utah USA..
