Enhancing the Home Page

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en-US">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Christoper Calvachi | WWD 130</title>
+    <meta name="description" content="Welcome to Christopher Calvachi's personal page, where I share my career path, featured projects and passions. Find out more about my experience in web development, graphic design and my commitment to technological innovation. Connect with me and let's explore new opportunities together.">
+    <meta name="author" content="Christoper Calvachi">
     <link rel="stylesheet" href="Styles/styles.css">
 </head>
 <body>
@@ -22,6 +24,13 @@
             I work for a company called Lambdo which is in Utah USA..
         </p>
     </main>
+    <aside>
+        <h2>Ecuador</h2>
+        <img src="img/ecuador.jpg" alt="Ecuador Cotopaxi">
+        <p>Ecuador, a vibrant country located on the northwest coast of South America, is known for its incredible biodiversity, breathtaking landscapes and rich cultural heritage. 
+            From the Galapagos Islands to the Andes and the Amazon, Ecuador offers a unique variety of natural and cultural experiences.
+        </p>
+    </aside>
     <footer>
         <p>&copy;2024 Christoper Calvachi Quito, Ecuador</p>
     </footer>
