W03: Enhancing Your Course Home Page

--- a/index.html
+++ b/index.html
@@ -14,17 +14,25 @@
             <a href="#">Home</a>
             <a href="wwr/">Christoper Site</a>
             <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://www.linkedin.com/in/christoper-enrique-calvachi-carabajo">Linkedin</a>
+            <a href="https://www.facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
-        <h1>Christoper Calvachi | WDD 130</h1>
-        <img src="img/profile.jpg" alt="Hello, my name is Christoper Calvachi" width="200">
-        <p>Hello! My name is Christoper Calvachi and i am from Quito, Ecuador.
-            I am very excited to start my course here at BYU Idaho, I have been a web developer for 4 years, 
-            I work for a company called Lambdo which is in Utah USA..
-        </p>
+        <div class="container">
+            <h1>Christoper Calvachi | WDD 130</h1>
+            <img src="img/profile.jpg" alt="Hola, mi nombre es Christoper Calvachi" class="profile-image">
+            <p>
+                Hello! My name is Christoper Calvachi and I am from Quito, Ecuador. I am very excited to start my course here at BYU Idaho. I have been a web developer for 4 years and I work for a company called Lambdo, which is in Utah, USA.
+            </p>
+        </div>
+        <ul class="box">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guayaquil-ecuador-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=eng">Guatemala-city Guatemala temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/quito-ecuador-temple?lang=eng">Quito Ecuador Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Ecuador</h2>
         <img src="img/ecuador.jpg" alt="Ecuador Cotopaxi">
         <p>Ecuador, a vibrant country located on the northwest coast of South America, is known for its incredible biodiversity, breathtaking landscapes and rich cultural heritage. 
@@ -35,4 +43,5 @@
         <p>&copy;2024 Christoper Calvachi Quito, Ecuador</p>
     </footer>
 </body>
+<!-- last modification: 19/06/2024 -->
 </html>
