target: _blank I missed that

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <nav>
-            <a href="#">Home</a>
-            <a href="wwr/">Christoper Site</a>
-            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
-            <a href="https://www.linkedin.com/in/christoper-enrique-calvachi-carabajo">Linkedin</a>
-            <a href="https://www.facebook.com">Facebook</a>
+            <a href="#" target="_blank">Home</a>
+            <a href="wwr/" target="_blank">Christoper Site</a>
+            <a href="wwr/site-plan-rafting.html" target="_blank">Rafting Site Plan</a>
+            <a href="https://www.linkedin.com/in/christoper-enrique-calvachi-carabajo" target="_blank">Linkedin</a>
+            <a href="https://www.facebook.com" target="_blank">Facebook</a>
         </nav>
     </header>
     <main>
@@ -27,9 +27,9 @@
             </p>
         </div>
         <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/guayaquil-ecuador-temple?lang=eng">Guayaquil Ecuador Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=eng">Guatemala-city Guatemala temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/quito-ecuador-temple?lang=eng">Quito Ecuador Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guayaquil-ecuador-temple?lang=eng" target="_blank">Guayaquil Ecuador Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=eng" target="_blank">Guatemala-city Guatemala temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/quito-ecuador-temple?lang=eng" target="_blank">Quito Ecuador Temple</a></li>
         </ul>
     </main>
     <aside class="box">
