--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 <body>
     <header>
         <nav>
-            <a href="#" target="_blank">Home</a>
-            <a href="wwr/" target="_blank">Christoper Site</a>
-            <a href="wwr/site-plan-rafting.html" target="_blank">Rafting Site Plan</a>
-            <a href="https://www.linkedin.com/in/christoper-enrique-calvachi-carabajo" target="_blank">Linkedin</a>
-            <a href="https://www.facebook.com" target="_blank">Facebook</a>
+            <a href="#">Home</a>
+            <a href="wwr/">Christoper Site</a>
+            <a href="wwr/site-plan-rafting.html">Rafting Site Plan</a>
+            <a href="https://www.linkedin.com/in/christoper-enrique-calvachi-carabajo">Linkedin</a>
+            <a href="https://www.facebook.com">Facebook</a>
         </nav>
     </header>
     <main>
