small changes to image names and main index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <main>
         <div class="container">
             <h1>Christoper Calvachi | WDD 130</h1>
-            <img src="img/profile.jpg" alt="Hola, mi nombre es Christoper Calvachi" class="profile-image">
+            <img src="images/profile.jpg" alt="Hola, mi nombre es Christoper Calvachi" class="profile-image">
             <p>
                 Hello! My name is Christoper Calvachi and I am from Quito, Ecuador. I am very excited to start my course here at BYU Idaho. I have been a web developer for 4 years and I work for a company called Lambdo, which is in Utah, USA.
             </p>
@@ -34,7 +34,7 @@
     </main>
     <aside class="box">
         <h2>Ecuador</h2>
-        <img src="img/ecuador.jpg" alt="Ecuador Cotopaxi">
+        <img src="images/ecuador.jpg" alt="Ecuador Cotopaxi">
         <p>Ecuador, a vibrant country located on the northwest coast of South America, is known for its incredible biodiversity, breathtaking landscapes and rich cultural heritage. 
             From the Galapagos Islands to the Andes and the Amazon, Ecuador offers a unique variety of natural and cultural experiences.
         </p>
