Rafting Project: Site Plan

--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -3,15 +3,17 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>Site Plan</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1.0">
+  <title>Rafting Site Plan | Christoper Calvachi</title>
+  <meta name="description" content="Website to inform potential clients about our services, and how we can make their trip an adventure">
+  <meta name="author" content="Christoper Calvachi">
   <link type="text/css" rel="stylesheet" href="styles/site-plan-rafting.css" />
 </head>
 
 <body>
   <header>
-    <h1>Dry Oar Site Plan</h1>
-    <h2>Julio Reyes</h2>
-    <h2>WDD 130-01</h2>
+    <h1>Rafting Site Plan</h1>
+    <h2>Christoper Calvachi</h2>
   </header>
   <main>
     
@@ -40,7 +42,7 @@
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="images/roundlogo.png" alt="Logo image" />
+    <img src="/wwr/images/logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
@@ -48,8 +50,8 @@
     <h3>Color Palette</h3>
     
     <p>Palette URL:</p>
-    <a href="https://coolors.co/002c7d-5aed90-ff9933-ffffff"
-      target="_blank">https://coolors.co/002c7d-5aed90-ff9933-ffffff</a>
+    <a href="https://coolors.co/palette/8ecae6-219ebc-023047-ffb703-fb8500"
+      target="_blank">https://coolors.co/palette/8ecae6-219ebc-023047-ffb703-fb8500</a>
 
     <table class="colors">
       <tr>
@@ -115,12 +117,15 @@
 
     <h3>Home</h3>
 
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/wireframe_home.png" alt="home page wireframe" />
+    <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-home.png" alt="Home Page Wireframe Example Design" width="700">
 
     <h3>FAQ</h3>
 
-    <img src="images/wireframe_page2.png" alt="FAQ wireframe"> 
+    <img src="https://byui-cse.github.io/wdd130-ww-course/images/wwr/wwr-wireframe-aboutus-update.png" alt="About Us Page Wireframe Design" width="700"> 
   </main>
+  <footer>
+    <p>©2024 🌴 Rafting Site Document 🌴 Christoper Calvachi 🌴 WDD 130</p>
+  </footer>
 </body>
 
 </html>
