--- a/wwr/site-plan-rafting.html
+++ b/wwr/site-plan-rafting.html
@@ -42,7 +42,7 @@
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
-    <img src="/wwr/images/logo.png" alt="Logo image" />
+    <img src="images/logo.png" alt="Logo image" />
     <hr />
     <h2>Style Guide</h2>
 
