imgage/wrr/about

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -36,11 +36,11 @@
         <section>
             <h2 class="section-title">Adventure Awaits You!</h2>
             <div class="adventure-images">
-                <img src="images/rafting1.jpeg" alt="Rafting Image 1">
-                <img src="images/rafting2.jpeg" alt="Rafting Image 2">
-                <img src="images/rafting3.jpeg" alt="Rafting Image 3">
-                <img src="images/rafting4.jpeg" alt="Rafting Image 4">
-                <img src="images/rafting5.jpeg" alt="Rafting Image 5">
+                <img src="images/Rafting1.jpeg" alt="Rafting Image 1">
+                <img src="images/Rafting2.jpeg" alt="Rafting Image 2">
+                <img src="images/Rafting3.jpeg" alt="Rafting Image 3">
+                <img src="images/Rafting4.jpeg" alt="Rafting Image 4">
+                <img src="images/Rafting5.jpeg" alt="Rafting Image 5">
             </div>
         </section>
     </main>
