Using CSS Flex and Grid on the Course Home Page

--- a/index.html
+++ b/index.html
@@ -18,27 +18,32 @@
             <a href="https://www.facebook.com">Facebook</a>
         </nav>
     </header>
-    <main>
-        <div class="container">
+    <div class="grid">
+        <main>
             <h1>Christoper Calvachi | WDD 130</h1>
+            <hr>
             <img src="images/profile.jpg" alt="Hola, mi nombre es Christoper Calvachi" class="profile-image">
             <p>
                 Hello! My name is Christoper Calvachi and I am from Quito, Ecuador. I am very excited to start my course here at BYU Idaho. I have been a web developer for 4 years and I work for a company called Lambdo, which is in Utah, USA.
+                I love video games and movies, I am part of the community of video game developers here in Ecuador, we are in constant search of making Ecuador a power in the development of video games worldwide.
+                I have a great love for the Jurassic Park movies, I enjoy building with LEGO, and my biggest passion is mountains.
+                I'm married and I also have a deep taste for 80's and 90's rock.
             </p>
-        </div>
-        <ul class="box">
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/guayaquil-ecuador-temple?lang=eng" target="_blank">Guayaquil Ecuador Temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=eng" target="_blank">Guatemala-city Guatemala temple</a></li>
-            <li><a href="https://www.churchofjesuschrist.org/temples/details/quito-ecuador-temple?lang=eng" target="_blank">Quito Ecuador Temple</a></li>
-        </ul>
-    </main>
-    <aside class="box">
-        <h2>Ecuador</h2>
-        <img src="images/ecuador.jpg" alt="Ecuador Cotopaxi">
-        <p>Ecuador, a vibrant country located on the northwest coast of South America, is known for its incredible biodiversity, breathtaking landscapes and rich cultural heritage. 
-            From the Galapagos Islands to the Andes and the Amazon, Ecuador offers a unique variety of natural and cultural experiences.
-        </p>
-    </aside>
+            <ul class="box">
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/guayaquil-ecuador-temple?lang=eng" target="_blank">Guayaquil Ecuador Temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/guatemala-city-guatemala-temple?lang=eng" target="_blank">Guatemala-city Guatemala temple</a></li>
+                <li><a href="https://www.churchofjesuschrist.org/temples/details/quito-ecuador-temple?lang=eng" target="_blank">Quito Ecuador Temple</a></li>
+            </ul>
+        </main>
+        <aside class="box">
+            <h2>Ecuador</h2>
+            <img src="images/ecuador.jpg" alt="Ecuador Cotopaxi">
+            <p>Ecuador, a vibrant country located on the northwest coast of South America, is known for its incredible biodiversity, breathtaking landscapes and rich cultural heritage. 
+                From the Galapagos Islands to the Andes and the Amazon, Ecuador offers a unique variety of natural and cultural experiences.
+                In addition to the famous Galapagos Islands, Ecuador is home to an incredible variety of natural landscapes including tropical beaches, active volcanoes such as Cotopaxi, and a dense Amazon jungle teeming with wildlife.
+            </p>
+        </aside>
+    </div>
     <footer>
         <p>&copy;2024 Christoper Calvachi Quito, Ecuador</p>
     </footer>
