Rafting Project: About Us Page Layout

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -11,15 +11,17 @@
 </head>
 
 <body>
-    <nav class="navbar">
-        <a href="#" class="navbar-logo"><img src="images/logo.png" alt="Logo" width="50"></a>
-        <ul class="navbar-links">
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About Us</a></li>
-            <li><a href="trips.html">Trips</a></li>
-            <li><a href="contact.html">Contact Us</a></li>
-        </ul>
-    </nav>
+    <header>
+        <nav class="navbar">
+            <a href="#" class="navbar-logo"><img src="images/logo.png" alt="Logo" width="50"></a>
+            <ul class="navbar-links">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
+                <li><a href="trips.html">Trips</a></li>
+                <li><a href="contact.html">Contact Us</a></li>
+            </ul>
+        </nav>
+    </header>
     <main>
         <div class="hero">
             <img src="images/hero.png" alt="Hero Image">
@@ -33,19 +35,41 @@
             <h2 class="section-title">History</h2>
             <p class="section-content">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sunt, molestiae!</p>
         </section>
-        <section>
-            <h2 class="section-title">Adventure Awaits You!</h2>
+        <section class="adventures">
+            <h2 class="section-title">Adventures</h2>
             <div class="adventure-images">
-                <img src="images/Rafting1.jpeg" alt="Rafting Image 1">
-                <img src="images/Rafting2.jpeg" alt="Rafting Image 2">
-                <img src="images/Rafting3.jpeg" alt="Rafting Image 3">
-                <img src="images/Rafting4.jpeg" alt="Rafting Image 4">
-                <img src="images/Rafting5.jpeg" alt="Rafting Image 5">
+                <figure>
+                    <img src="images/Rafting1.jpeg" alt="Los Dientes del Diablo">
+                    <figcaption>Los Dientes del Diablo</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Rafting2.jpeg" alt="Big Mallard">
+                    <figcaption>Big Mallard</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Rafting3.jpeg" alt="Half Day Adventure">
+                    <figcaption>Half Day Adventure</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Rafting4.jpeg" alt="Full Day Excursion">
+                    <figcaption>Full Day Excursion</figcaption>
+                </figure>
+                <figure>
+                    <img src="images/Rafting5.jpeg" alt="Sunset Float">
+                    <figcaption>Sunset Float</figcaption>
+                </figure>
             </div>
         </section>
     </main>
     <footer>
-        Footer Content including Social Media Icons/Links
+        <div class="footer-content">
+            <p>&copy; 2024 Rafting Project. All rights reserved.</p>
+            <div class="social-icons">
+                <a href="#"><img src="images/facebook.png" alt="Facebook"></a>
+                <a href="#"><img src="images/twitter.png" alt="Twitter"></a>
+                <a href="#"><img src="images/instagram.png" alt="Instagram"></a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
