--- a/quiz.html
+++ b/quiz.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz on HTML and CSS</title>
-    <link rel="stylesheet" href="styles/quiz.css">
+    <link rel="stylesheet" href="Styles/quiz.css">
 </head>
 <body>
     <header>
