--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -33,15 +33,15 @@
         <section id="employees">
             <h2>Meet Our Team</h2>
             <div class="employee">
-                <img src="/wwr/images/Employee1.jpg" alt="Employee 1">
+                <img src="images/Employee1.jpg" alt="Employee 1">
                 <p>John Doe - Guide</p>
             </div>
             <div class="employee">
-                <img src="/wwr/images/employee2.jpg" alt="Employee 2">
+                <img src="images/employee2.jpg" alt="Employee 2">
                 <p>Jane Smith - Manager</p>
             </div>
             <div class="employee">
-                <img src="/wwr/images/employee3.jpg" alt="Employee 3">
+                <img src="images/employee3.jpg" alt="Employee 3">
                 <p>Mike Johnson - Instructor</p>
             </div>
         </section>
