--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -15,7 +15,7 @@
         <nav class="navbar">
             <a href="#" class="navbar-logo"><img src="images/logo.png" alt="Logo" width="50"></a>
             <ul class="navbar-links">
-                <li><a href="home.html">Home</a></li>
+                <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About Us</a></li>
                 <li><a href="trips.html">Trips</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
