--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -3,8 +3,8 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>About Us | Rafting Company</title>
-        <meta name="description" content="Website to inform potential clients about our services, and how we can make their trip an adventure">
+        <title>Trips | Rafting Company</title>
+        <meta name="description" content="we offer different tours for our customers with equipment">
         <meta name="author" content="Christoper Calvachi">
         <link rel="stylesheet" href="styles/trips.css">
     </head>
@@ -24,53 +24,40 @@
         <main>
             <section class="excursion">
                 <img src="images/mountain.jpeg" alt="Montaña">
-                <h2>Aventura en la Montaña</h2>
-                <p>Explora las cumbres más altas con nuestro equipo especializado.</p>
+                <h2>Mountain Adventurea</h2>
+                <p>Explore the highest peaks with our specialized equipment.</p>
                 <ul class="equipo">
-                    <li>Mochila resistente</li>
-                    <li>Botas de montaña</li>
-                    <li>Bastones de trekking</li>
-                    <li>Ropa térmica</li>
+                    <li>Heavy-duty backpack</li>
+                    <li>Hiking boots</li>
+                    <li>Trekking poles</li>
+                    <li>Thermal clothing</li>
                     <li>GPS</li>
                 </ul>
                 <button class="btn">Más información</button>
             </section>
             <section class="excursion">
                 <img src="images/forest.jpeg" alt="Bosque">
-                <h2>Caminata en el Bosque</h2>
-                <p>Descubre la flora y fauna de los bosques más exuberantes.</p>
+                <h2>Walk in the Forest</h2>
+                <p>Discover the flora and fauna of the most exuberant forests.</p>
                 <ul class="equipo">
-                    <li>Mochila resistente</li>
-                    <li>Botas de montaña</li>
-                    <li>Bastones de trekking</li>
-                    <li>Ropa térmica</li>
+                    <li>Heavy-duty backpack</li>
+                    <li>Hiking boots</li>
+                    <li>Trekking poles</li>
+                    <li>Thermal clothing</li>
                     <li>GPS</li>
                 </ul>
                 <button class="btn">Más información</button>
             </section>
             <section class="excursion">
                 <img src="images/desert.jpeg" alt="Desierto">
-                <h2>Expedición en el Desierto</h2>
-                <p>Vive la experiencia única de atravesar dunas interminables.</p>
+                <h2>Desert Expedition</h2>
+                <p>Live the unique experience of crossing endless dunes.</p>
                 <ul class="equipo">
-                    <li>Mochila ligera</li>
-                    <li>Zapatos de senderismo</li>
-                    <li>Binoculares</li>
-                    <li>Ropa impermeable</li>
-                    <li>Mapa y brújula</li>
-                </ul>
-                <button class="btn">Más información</button>
-            </section>
-            <section class="excursion">
-                <img src="images/desert.jpeg" alt="Desierto">
-                <h2>Expedición en el Desierto</h2>
-                <p>Vive la experiencia única de atravesar dunas interminables.</p>
-                <ul class="equipo">
-                    <li>Sombrero para el sol</li>
-                    <li>Gafas de sol</li>
-                    <li>Botas de desierto</li>
-                    <li>Protector solar</li>
-                    <li>Agua y comida</li>
+                    <li>Backpack </li>
+                    <li>Hiking shoes</li>
+                    <li>Binoculars</li>
+                    <li>Waterproof clothing</li>
+                    <li>Map and compass</li>
                 </ul>
                 <button class="btn">Más información</button>
             </section>
